# tree-sitter-css-in-js

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  css-in-js-mode.el  grammar.js  package-lock.json  package.json  tree-sitter-css-in-js.el
.github/workflows/: node.js.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: formats.txt  interpolation.txt
src/: grammar.json  node-types.json  parser.c  scanner.c
src/scanner/: LICENSE
